added development Dockerfile and README

--- a/src/client/main.html
+++ b/src/client/main.html
@@ -1,9 +1,10 @@
 <head>
-  <title>src</title>
+  <title>Alpine Meteor</title>
 </head>
 
 <body>
   <h1>Welcome to Alpine Meteor!</h1>
+  <p>a docker launchpad for meteor projects made by <a href="https://plus.google.com/u/0/114475888000805089000">Nick Batts</a></p>
 
   {{> hello}}
   {{> info}}
