updated README and landing page

--- a/src/client/main.html
+++ b/src/client/main.html
@@ -4,7 +4,8 @@
 
 <body>
   <h1>Welcome to Alpine Meteor!</h1>
-  <p>a docker launchpad for meteor projects made by <a href="https://plus.google.com/u/0/114475888000805089000">Nick Batts</a></p>
+  <p>a docker launchpad for meteor projects made by <a href="https://plus.google.com/u/0/114475888000805089000" target="blank">Nick Batts</a></p>
+  <p>Star this project on <a href="https://github.com/nickbatts/test-alpine-meteor" target="blank">Github</a>!</p>
 
   {{> hello}}
   {{> info}}
